--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ coverage
 # Benchmarking
 benchmarks/graphs
 
-access.log
+/log/
+
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore    
